# agent-tools

./: .gitignore  README.md  biome.jsonc  package.json  turbo.json
apps/hermes-slog-plugin/: README.md  pyproject.toml
apps/hermes-slog-plugin/src/hermes_slog_plugin/: __init__.py  cli_adapter.py  provenance.py  read_tools.py  results.py  schemas.py  write_tools.py
apps/hermes-slog-plugin/tests/: conftest.py  test_cli_adapter.py  test_end_to_end_flow.py  test_failure_modes.py  test_harness.py  test_hermes_loader_qa.py  test_provenance.py  test_read_tools.py  test_registration.py  test_schemas.py  test_write_tools.py
apps/opencode-plugin/: package.json  tsconfig.json
apps/opencode-plugin/src/: index.ts  provenance.ts
apps/opencode-plugin/src/tools/: correct.ts  log.ts  read.ts  shared.ts
apps/opencode-plugin/test/: correct.test.ts  harness.test.ts  harness.ts  log.test.ts  plugin-shape.test.ts  provenance.test.ts  read.test.ts
design/slog/: 001-establishment.md  002-adapter-interface.md  002-agent-adapters.md  003-reporting-and-summaries.md  004-refs-and-context.md  005-indexing-and-sync.md  CONTEXT.md
docs/adr/: 0001-origin-is-carried-by-authority-mode.md
